# thesis_ros

./: .gitignore  README.md  catkin_make.sh
map_enhancement/shDir_SignRecognition&Position/: s3_display_rviz.sh
map_enhancement/shDir_simulation/: s2.1.2_keyboard_control.sh  s2.1.3_save_gmapping_map.sh  s2.3_sim_OLM.sh
map_enhancement/simulation/: CMakeLists.txt
map_enhancement/simulation/include/constants/: node_constants.h  obstacle_constants.h
map_enhancement/simulation/include/database/: database_decorator.h
map_enhancement/simulation/include/my_lib/: auxiliary_func.h  sound.sh
map_enhancement/simulation/launch/: sign_recognition_and_tf.launch  simulation_NavStack_MEM_rviz.launch  simulation_OLM.launch  waffle_gazebo.launch
map_enhancement/simulation/move_base_param/: dwa_local_planner_params_waffle.yaml
map_enhancement/simulation/msg/: DatabaseEntryInsert.msg  JobBriefInfo.msg
map_enhancement/simulation/rviz/: sim_navigation.rviz
map_enhancement/simulation/scripts/database/: database.cpp
map_enhancement/simulation/scripts/enrichment/: map_enrichment.cpp
map_enhancement/simulation/scripts/observation/: obstacle_det_pos_calc.cpp
map_enhancement/simulation/scripts/receiver/: job_receiver.cpp
map_enhancement/simulation/scripts/scheduler/: job_scheduler.cpp  log.txt
map_enhancement/simulation/srv/: AddObjectOnMapMsg.srv  ScheduleJobMsg.srv
map_enhancement/simulation/worlds/: sim_env_with_obstacles.world  sim_env_without_obstacles.world
map_enhancement/simulation/worlds/thesis_model/: model.config  model.sdf
mongodb_store/: README.md
mongodb_store/mongodb_log/src/: mongodb_log_cimg.cpp
mongodb_store/mongodb_store/include/mongodb_store/: message_store.h
mongodb_store/mongodb_store/launch/: mongodb_store.launch  mongodb_store_inc.launch
mongodb_store/mongodb_store/scripts/: message_store_node.py  mongodb_server.py
mongodb_store/mongodb_store/src/mongodb_store/: message_store.py
mongodb_store/mongodb_store_msgs/: CMakeLists.txt
mongodb_store/mongodb_store_msgs/srv/: MongoDropCollectionMsg.srv
rosbot_description/: catkin_make.sh
rosbot_description/rosbot_description/launch/: rosbot_gazebo.launch
rosbot_description/rosbot_description/urdf/: rosbot.gazebo  rosbot.xacro
rosbot_description/rosbot_gazebo/worlds/: image_teaching.world
rosbot_description/rosbot_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_planner.yaml  move_base_params.yaml  trajectory_planner.yaml
rosbot_description/shDir_SignRecognition&Position/: s2_teaching_recognition_and_tf.sh
rosbot_description/shDir_simulation/: s1_sim_gazebo.sh  s2.1.1_sim_gmapping_rviz.sh  s2.1.3_save_gmapping_map.sh  s2.2_sim_NavStack_MEM_rviz.sh  s2.2_sim_rviz_NavStack_MEM.sh  s2.2_sim_rviz_navstack.sh  s3_cmd_control.sh  s3_keyboard_control.sh
rosbot_description/sign_recognition&position/: s1_sim_gazebo.sh  s2.1_teaching_recognition.sh  s2.2_trial_recognition&transform.sh
rosbot_description/simulation/: CMakeLists.txt  display_rosbot_model.sh  package.xml  s1_sim_gazebo.sh  s2.1.1_sim_rviz_gmapping.sh  s2.1.2_save_gmapping_map.sh  s2.2_sim_rviz_navstack.sh
rosbot_description/simulation/config/: custom_rosconsole.conf
rosbot_description/simulation/include/cache/: cache.h
rosbot_description/simulation/include/constants/: node_constants.h  obstacle_constants.h
rosbot_description/simulation/include/control/: move_base_client.h
rosbot_description/simulation/include/my_lib/: auxiliary_func.h
rosbot_description/simulation/launch/: display_rosbot_model.launch  gazebo_recognition_world.launch  simulation_gmapping_rviz.launch  simulation_rosbot_world.launch  simulation_rviz_NavStack_MEM.launch  simulation_rviz_gmapping.launch  simulation_rviz_navstack.launch  simulation_waffle_and_world.launch
rosbot_description/simulation/maps/: maze.pgm  reference_map.pgm  reference_map.yaml
rosbot_description/simulation/msg/: DatabaseEntryUpdate.msg
rosbot_description/simulation/rviz/: sim_navigation.rviz
rosbot_description/simulation/scripts/: sign_coordinates_on_image.cpp
rosbot_description/simulation/scripts/catcher/: job_catcher.cpp
rosbot_description/simulation/scripts/control/: cmd_control.cpp
rosbot_description/simulation/scripts/enrichment/: map_enrichment(copyOfOld).cpp  map_enrichment.cpp
rosbot_description/simulation/srv/: CleanCacheMsg.srv
rosbot_description/simulation/worlds/: sim_env_with_obstacles.world
rosbot_description/simulation/worlds/aux_model/Destination_Plane/: model.sdf
rosbot_description/simulation/worlds/aux_model/Stop_Sign_Small/: model.sdf
rosbot_description/src/rosbot_description/launch/: display_rosbot_model.launch  simulation_rosbot_world.launch  simulation_rviz_gmapping.launch  simulation_rviz_navstack.launch
rosbot_description/src/rosbot_description/urdf/: rosbot.gazebo
rosbot_description/src/rosbot_gazebo/worlds/: maze.world
rosbot_description/src/rosbot_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  trajectory_planner.yaml
rosbot_description/src/simulation/: CMakeLists.txt  package.xml
rosbot_description/src/simulation/maps/: maze.yaml
turtlebot3_model/: README.md
turtlebot3_model/turtlebot3_bringup/: CMakeLists.txt  package.xml
turtlebot3_model/turtlebot3_bringup/launch/: turtlebot3_bringup.launch
turtlebot3_model/turtlebot3_navigation/launch/: amcl.launch  move_base.launch  turtlebot3_navigation.launch
turtlebot3_model/turtlebot3_slam/: CMakeLists.txt
turtlebot3_model/turtlebot3_slam/launch/: turtlebot3_slam.launch
turtlebot3_model/turtlebot3_teleop/launch/: turtlebot3_teleop_key.launch
turtlebot3_msgs/: README.md
turtlebot3_playground/: README.md
turtlebot3_playground/shDir_begin_gmapping/: s1_turtlebot_gazebo.sh  s2_rviz_slam.sh  s3_keyboard_control.sh  s4_save_map.sh
turtlebot3_playground/shDir_begin_navigation/: s2_rviz_navstack.sh
turtlebot3_playground/turtlebot3_gazebo/launch/: turtlebot3_in_empty_world.launch  turtlebot3_in_world.launch
turtlebot3_playground/turtlebot3_gazebo/src/: turtlebot3_drive.cpp
(+35 files in other folders)
